CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT (FoxScriptEngine)

IF(CMAKE_SYSTEM MATCHES Linux)
  ADD_DEFINITIONS(-D__linux)
ELSE(CMAKE_SYSTEM MATCHES Linux)
  ADD_DEFINITIONS(-D__WINDOWS__)
  ADD_DEFINITIONS(-D_USRDLL)
  ADD_DEFINITIONS(-DSCRIPTENGINE_EXPORTS)
ENDIF(CMAKE_SYSTEM MATCHES Linux)

INCLUDE_DIRECTORIES(Src)
ADD_SUBDIRECTORY(Src)